--- a/styles/style.css
+++ b/styles/style.css
@@ -280,7 +280,41 @@ section{
     background-image: url(../images/red-bg.png);
     background-repeat: no-repeat;
     background-position: bottom;
+    margin-top: 120px;
 }
-.box-image img{
-    
+
+
+/* our awsome portfolio */
+
+.gift-text h3{
+    color: #F00;
+    font-family: Lato;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+.gift-text h1{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+}
+.gift-text p{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Lato;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-bottom: 40px;
+}
+.gift-text{
+    width: 896px;
+}
+.image-parent{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+#six-image{
+    margin-top: 120px;
 }
