--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,7 @@ section{
 #midnight-section{
     margin-top: 120px;
     height: 600px;
-    background-image:linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(../images/vectorrr.png);
+    background-image:linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(../images/midnight.png);
     border-radius: 20px;
 }
 
